maze.lessons.maze.island.IslandMaze.scala.error
Escaper:29: error: not found: value Nord
	if (getDirection()==Nord && !estFaceMur())
                            ^