maze.lessons.maze.island.IslandMaze.scala.code
override def run() 
{

def keepHandOnSideWall()
{
	while(!estSurBiscuit())
	{
		gauche()
		if (estFaceMur())
		{
			droite()
			if (estFaceMur())
			{
				droite()
				if (estFaceMur())
				{
					droite()
					avance()
				} else avance()
			} else avance()
		} else avance()
	}
	prendBiscuit()
}

def goNord()
{
	if (getDirection()==Nord && !estFaceMur())
	{
		avance()
	}
	else
	{
		droite()
	}
}


while (getY!=0)
{
	goNord
}
keepHandOnSideWall()

}